freest/test/prog/Invalid/SessionTypes/ExposeOutput/ExposeOutput.fst
module ExposeError where

foo : Int
foo = send 1 1